# comp-graph-lab

./: CMakeLists.txt  Canvas.cpp  Canvas.h  Graphics.cpp  Graphics.h  Primirives.h  README.md  Shape.cpp  Shape.h  Transform.h  main.cpp  shape.txt
resources/: shape.txt
src/: Graphics.cpp  Graphics.h  Shape.h  Transform.cpp  Transform.h
